# goal_plotter

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: workflow.yaml
goal_json/: goal_test.json  goal_test2.json
include/goal_plotter/: goal.h  goal.hpp
launch/: goal_gui.launch.py  goal_manager.launch.py  goal_plotter.launch.py  lv_goal_converter.launch.py
param/: map_server_config.yaml
rviz/: default_plot.rviz
scripts/: footprint_generator.py  goal_gui.py  json_test.py  lv_goal_converter.py  lv_goal_manager.py  py_test.py  ros_test.py
src/: get_goal.cpp  main_plot.cpp
tests/: read_goal.cpp  write_goal.cpp  write_json.cpp
